Fixed bug that made the game window way too small in pages.

--- a/game.css
+++ b/game.css
@@ -5,7 +5,7 @@ body {
 }
 
 * {
-    font-size: 45%;
+    font-size: 75%;
     font-family: 'Anton', sans-serif; 
     margin: 0;
     padding: 0;
